Fixed nav bar text wrapping issue in Chrome

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -480,6 +480,7 @@ nav li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	white-space:nowrap;
 }
 
 nav li a:hover:not(.active) {
